# academy-langchain-langgraph

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
01_langchain/: agent_initialization.py  connect_local_mcp_server.py  connect_online_mcp_server.py  langchain_multi_agent.py  memory.py  models_initialization_ways.py  multimodal_messages.py  prompting.py  runtime_context.py  streaming_output.py  streaming_output_with_events.py  tools.py
01_langchain/resources/: mcp_server.py
db/: db.py
project_langchain/: agent_initialization.py  connect_local_mcp_server.py  connect_online_mcp_server.py  human_in_the_loop.py  langchain_multi_agent.py  memory.py  models_initialization_ways.py  multimodal_messages.py  prompting.py  runtime_context.py  streaming_output.py  summarize_messages.py  tools.py
project_langchain/project_wedding_planner/: agents.py  main.py  mcp_client.py  state.py  tools.py
project_langchain/resources/: mcp_server.py
project_langgraph/: agent_langraph.py  agent_with_memory.py  edit_state_human_feedback.py  human_in_the_loop_breakpoint.py  llm_output_streaming_langgraph.py  longterm_memory_langgraph_store.py  map_reduce.py  message_summarization.py  messages_state_example.py  multiple_schema.py  parallelization.py  remove_state_messages.py  research_assistant_project.py  routing_with_ToolNode.py  simple_graph.py  state_reducer.py  state_schema.py  sub_graph_summarize_logs_and_find_failure.py
