[project]
name = "academy-langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "ipython>=9.13.0",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.2",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-api>=0.8.5",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langgraph-cli>=0.4.24",
    "langsmith>=0.8.0",
    "mcp>=1.27.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "wikipedia>=1.4.0",
]
